# BEVE.jl

./: .gitignore  Project.toml  README.md  demo.jl
.github/workflows/: ci.yml
beve_validation/: CMakeLists.txt  analyze_benchmarks.jl  benchmark.cpp  benchmark.jl  build_and_test.sh  comprehensive_matrix_test.jl  debug_column_major.cpp  debug_complex_encoding.jl  extensions_test.cpp  main.cpp  run_benchmarks.sh  test_complex_fix.jl  test_complex_methods.jl  test_cpp_integer_objects.jl  test_cpp_matrix.jl  test_eigen_matrices.cpp  test_glaze_format.jl  test_individual_matrices.jl  test_integer_objects.cpp  test_integer_objects.jl  test_matrices.cpp  test_matrices.jl  test_matrices_eigen.cpp  test_matrix_format.jl  test_single_matrix.cpp  test_spec_compliance.jl  test_type_tags.jl  test_validation.jl  validate_all_matrices.cpp
ext/: CodecZstdExt.jl  HTTPExt.jl
src/: BEVE.jl  De.jl  Headers.jl  Http.jl  Ser.jl
test/: Project.toml  runtests.jl  test_http_extension.jl
